[metadata]
name = flask-request-uid
url = https://github.com/digimach/Flask-RequestUID
project_urls =
    Documentation = https://oss-docs.digimach.com/projects/flask-requestuid/en/latest/
    Code = https://github.com/digimach/Flask-RequestUID
license = BSD-3-Clause
author = Digimach
author_email = Digimach
maintainer = Digimach
maintainer_email = Digimach
description = A flask extension to add a unique identifier to the request for tracing and logging.
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    License :: OSI Approved :: BSD-3-Clause
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Operating System :: OS Independent
    Programming Language :: Python

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    flask-request-uid = flask_request_uid.cli:main
